--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ attrs==21.4.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 frozenlist==1.3.0
-homematicip==1.0.2.post0.dev15
+homematicip==1.0.7
 idna==3.3
 multidict==6.0.2
 requests==2.27.1
